--- a/assets/styles/glossary.css
+++ b/assets/styles/glossary.css
@@ -48,21 +48,23 @@
 
 h1{
     margin-top: 10px;
+    margin-left: 14px;
     margin-bottom: 5px;
 }
 
 h2{
-    margin-top: 0px;
+    margin-top: 10px;
+    margin-left: 45px;
 }
 
 h3{
-    margin-left: calc(var(--left-margin) + 33px);
+    margin-left: calc(var(--left-margin) + 31px);
     margin-top: 10px;
     color: var(--text-color);
 }
 
 p{
-    margin-left: calc(var(--left-margin) + 30px);
+    margin-left: calc(var(--left-margin) + 32px);
     margin-bottom: 20px;
     margin-right: 30px;
 }
@@ -85,12 +87,21 @@ p{
         margin-top: -12px;
     }
 
+    h1{
+        margin-left: 30px;
+    }
+
+    h2{
+        margin-top: 20px;
+        margin-left: 75px;
+    }
+
     h3{
-        margin-left: calc(var(--left-margin) + 38px);
+        margin-left: calc(var(--left-margin) + 42px);
     }
     
     p{
-        margin-left: calc(var(--left-margin) + 38px);
+        margin-left: 75px;
     }
 }
 
@@ -101,12 +112,13 @@ p{
     }
 
     h3{
-        margin-left: 74px;
+        margin-left: calc(var(--left-margin) + 50px);
     }
 
     p{
-        max-width: 45ch;
-        margin-left: 74px;
+        max-width: 52ch;
+        margin-left: 75px;
+
     }
 
     .bullet{
