--- a/assets/styles/search.css
+++ b/assets/styles/search.css
@@ -21,7 +21,7 @@ form{
 }
 
 #selected-term-container{
-    margin-top: -20px;
+    margin-top: -85px;
     margin-left: 0px;
 }
 
@@ -46,15 +46,21 @@ form{
     flex-direction: row;
 }
 
+h1{
+    margin-bottom: 5px;
+}
+
 h2{
-    margin-left: calc(var(--left-margin) + 2px);
+    margin-left: calc(var(--left-margin) + 5px);
+    margin-top: 15px;
+    margin-bottom: 5px;;
 }
 
 
 h3{
     /* margin-left: calc(var(--left-margin) + 15px); */
     margin: 14px;
-    margin-left: calc(var(--left-margin) + 2px);
+    margin-left: calc(var(--left-margin) + 6px);
     margin-top: 18px; 
     /* margin-top: 1px; */
     color: var(--text-color);
@@ -62,7 +68,7 @@ h3{
 
 
 p{
-    margin-left: calc(var(--left-margin) + 2px);
+    margin-left: calc(var(--left-margin) + 5px);
     margin-bottom: 20px;
     margin-right: 30px;
     margin-top: -6px;
@@ -154,13 +160,24 @@ p{
         margin-left: calc(var(--left-margin) + 10px);
     }
 
+    h1{
+        margin-left: 30px;
+    }
+
     h3{
         margin-top: 22px;
+        margin-left: var(--left-margin);
     }
-    /* .translator-label.active{
-        max-width: 20ch;
-        width: 520px;
-    } */
+
+    h2{
+        margin-left: calc(var(--left-margin));
+        margin-top: 25px;
+    }
+    
+    
+    p{
+        margin-left: calc(var(--left-margin) + 2px);
+    }
 
     #translated-term-container.active{
         max-height: 385px;
@@ -186,24 +203,14 @@ p{
     }
 
     #selected-term-container{
-        margin-top: -20px;
+        margin-top: -70px;
         margin-left: 8px;
-    }
-    
-
-    h2{
-        margin-left: calc(var(--left-margin));
-    }
-    
-    
-    p{
-        margin-left: calc(var(--left-margin));
     }
     
     
     .menuitem{
         margin-left: -16px;
-        padding-bottom: 85px;
+        padding-bottom: 90px;
     }
 }
 
@@ -225,6 +232,11 @@ p{
         height: 60px;
         /* padding-left: 40px;
         padding-right: 40px; */
+    }
+
+    .menuitem{
+        margin-left: -16px;
+        padding-bottom: 100px;
     }
 }
 
